--- a/simpleDemo.html
+++ b/simpleDemo.html
@@ -5,86 +5,8 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Monarch Butterfly Simple Demo Grid</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="normalize.css">
-
-        <style type="text/css">
-
-            html {
-              box-sizing: border-box;
-              color: #222;
-              font-size: 1em;
-              line-height: 1.4;
-            }
-
-            *, *:before, *:after {
-              box-sizing: border-box;
-            }
-
-
-            .grid {
-                box-sizing: border:box;
-                clear: both;
-            }
-
-            .container {
-                width:90%;
-                margin-left: auto;
-                margin-right: auto;
-            }
-
-
-            [class*='grid-'] {
-                float: left;
-                width: 100%;
-                padding: 2%; 
-                display: block;
-
-            }
-
-            .grid:after {
-              content: "";
-              display: table;
-              clear: both;
-            }
-
-            /* 100 */
-            .grid-100 {
-                width: 100%;
-                background-color: orange;
-            }
-
-            /* 50 */
-            .grid-50 {
-                width: 50%;
-                background-color: red;
-            }
-
-            /* 1/3 */
-            .grid-1-3 {
-                width: 33.333%;
-                background-color: yellow;
-            }
-
-            /* 2/3 */
-            .grid-2-3 {
-                width: 66.666%;
-                background-color: blue;
-            }
-
-            /* 1/4 */
-            .grid-1-4 {
-                width: 25%;
-                background-color: green;
-
-            }
-
-            /* 3/4 */
-            .grid-3-4 {
-                width: 75%;
-                background-color: purple;
-            }
-
-        </style>
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/butterflyMonarch.css">
     </head>
     <body>
  
