--- a/simpleDemo.html
+++ b/simpleDemo.html
@@ -21,11 +21,11 @@
         <div class="grid">
             <div class="container"> 
                 <div class="grid-1-3">
-                    <h1>One third</h1>
+                    <h1>33% width</h1>
                 </div>
 
                 <div class="grid-2-3">
-                    <h1>Two third</h1>
+                     <h1>66% width</h1>
                 </div>
             </div>
         </div>
@@ -34,13 +34,43 @@
         <div class="grid">
             <div class="container"> 
                 <div class="grid-50">
-                  <h1>50%</h1>
+                  <h1>50% width</h1>
                 </div>
                 <div class="grid-50">
-                    <h1>50%</h1>
+                  <h1>50% width</h1>
                 </div>
             </div>
         </div>
+
+
+        <div class="grid">
+            <div class="container"> 
+                <div class="grid-1-4">
+                  <h1>25% width</h1>
+                </div>
+                <div class="grid-1-4">
+                  <h1>25% width</h1>
+                </div>
+                <div class="grid-1-4">
+                  <h1>25% width</h1>
+                </div>
+                <div class="grid-1-4">
+                  <h1>25% width</h1>
+                </div>
+            </div>
+        </div>
+
+        <div class="grid">
+            <div class="container"> 
+                <div class="grid-3-4">
+                  <h1>75% width</h1>
+                </div>
+                <div class="grid-1-4">
+                  <h1>25% width</h1>
+                </div>
+            </div>
+        </div>
+
 
 
     </body>
